--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.13.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-less": "^3.1.0"
+    "gulp-concat": "^2.4.1",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-less": "^3.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^1.5.3",
+    "q": "^1.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
